[tool.poetry]
name = "prosegrinder-restapi"
version = "0.1.0"
description = "RESTful interface for Prosegrinder"
authors = ["David L. Day <david@davidlday.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "prosegrinder_restapi"}]

[tool.poetry.dependencies]
python = "^3.10"
prosegrinder = "^1.3.4"
fastapi = "^0.88.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.8"
pytest = "^7.2.0"
black = "^22.12.0"
commitizen = "^2.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
